--- a/live-literals/livelit.html
+++ b/live-literals/livelit.html
@@ -42,7 +42,7 @@
       these views are considered part of the IDE: separate windows,
       panels, or widgets allow programmers to inspect and interact
       with live data and program execution.  In this paper we present
-      &#8220;live literals&#8221; where the source code itself is used
+      &ldquo;live literals&rdquo; where the source code itself is used
       as vehicle for immediate feedback and direct manipulation.  Live
       literals are like ordinary programming language literals, but
       they are automatically updated after certain changes to the
@@ -248,7 +248,7 @@ var grades = sheet([
 
         <figure>
         <label for="mn-bret" class="margin-toggle">&#8853;</label><input type="checkbox" id="mn-bret" class="margin-toggle"/><span class="marginnote">From Bret Victor, <a href="https://vimeo.com/36579366">Inventing on Principle</a>, 23th minute, CUSEC, 2012</span>
-        <img src="bret.png" style="width: 700px;"/>
+        <img src="bret.png" style="width: 700px; border: 1px dotted black; padding: 1em; background-color: white;"/>
       </figure>
 
 <p>
