--- a/live-literals/livelit.html
+++ b/live-literals/livelit.html
@@ -59,7 +59,7 @@
         The goal of live programming to improve programmer experience through better feedback and better tools to manipulate code.
         Often, the responsibility for these additional affordances is on the IDE: the user interface, for example, provides separate panels and widgets for inspecting and manipulating program
       code and execution. The source code itself is more or less taken for
-      granted as being a completely static input artifact.  In
+      granted as being a completely static input artefact.  In
       this work we make a first step towards turning this hierarchy
       upside-down. Instead of proposing further adornments of the IDE,
       we propose to make the source code itself more dynamic and
@@ -133,7 +133,7 @@
       <h3>Motivation</h3>
       <p>But why would this be relevant or even useful?
         A first motivation for live literals is simply &#8220;less is more&#8221;.
-        Live literals are  part of the primary artifact of the working programmer, the source code. There is no need for separate panels, views or popups, which divert the programmer&rsquo;s attention from the actual source code.
+        Live literals are  part of the primary artefact of the working programmer, the source code. There is no need for separate panels, views or popups, which divert the programmer&rsquo;s attention from the actual source code.
         Consequently, live literals promise a significantly simpler model of the IDE as a whole, since part of the traditional IDE services are taken over by the source code itself.
         Finally, the representation through data literals entails that the language of feedback is the same as the language of code, which again simplifies things considerably: one language is simpler to deal with than multiple languages.
         We conjecture that live literals improve feedback, paying the minimum cost in terms of cognitive distance and representation impedance mismatch, virtually eliminating all context switching.
