--- a/live-literals/livelit.html
+++ b/live-literals/livelit.html
@@ -68,10 +68,7 @@
       <p>
       We introduce <em>live literals</em>: literal data expressions in
       the source code which are updated continuously while the code is
-      executed or in reaction to program edit by the programmer. The archetypical example of live literals is captured in the following snippet of code:
-      <span class="code">
-        doIt("1 + 2", 3);
-      </span>
+      executed or in reaction to program edit by the programmer. The archetypical example of live literals is captured in the following snippet of code: <span class="code">doIt("1 + 2", 3)</span>.
       Whenever the the programmer edits the first
       argument, the second argument is replaced with a literal
       rendering of the result of evaluating the quoted code.  For
