Made self-contained.

--- a/live-literals/livelit.html
+++ b/live-literals/livelit.html
@@ -5,8 +5,8 @@
   <link rel="stylesheet" href="latex.css"/>
   <meta name="viewport" content="width=device-width, initial-scale=1">
     
-<script src="https://cdn.rawgit.com/jquery/esprima/2.7.2/esprima.js"></script>
-<script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
+<script src="esprima.js"></script>
+<script src="jquery-1.11.0.min.js"></script>
 <script src="libsheet.js"></script>
 
   <script>
@@ -376,7 +376,7 @@ class="margin-toggle"/>
       Finally, live text poses challenges for language design  in general, since it broadens the scope of traditional syntax and semantics, to include interaction as well.
         </p>
     
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.2.3/ace.js" type="text/javascript" charset="utf-8"></script>
+    <script src="ace.js" type="text/javascript" charset="utf-8"></script>
 <script>
   var editorTests = ace.edit("editor_tests");
   editorTests.renderer.setShowGutter(false);
