--- a/live-literals/livelit.html
+++ b/live-literals/livelit.html
@@ -1,13 +1,13 @@
 <!DOCTYPE HTML>
 <head>
     <meta charset="utf-8" />
-  <link rel="stylesheet" href="tufte.css"/>
-  <link rel="stylesheet" href="latex.css"/>
+  <link rel="stylesheet" href="styles/tufte.css"/>
+  <link rel="stylesheet" href="styles/latex.css"/>
   <meta name="viewport" content="width=device-width, initial-scale=1">
     
-<script src="esprima.js"></script>
-<script src="jquery-1.11.0.min.js"></script>
-<script src="libsheet.js"></script>
+<script src="js/esprima.js"></script>
+<script src="js/jquery-1.11.0.min.js"></script>
+<script src="js/libsheet.js"></script>
 
   <script>
     $(document).ready(function() {
@@ -376,7 +376,7 @@ class="margin-toggle"/>
       Finally, live text poses challenges for language design  in general, since it broadens the scope of traditional syntax and semantics, to include interaction as well.
         </p>
     
-    <script src="ace.js" type="text/javascript" charset="utf-8"></script>
+    <script src="js/ace.js" type="text/javascript" charset="utf-8"></script>
 <script>
   var editorTests = ace.edit("editor_tests");
   editorTests.renderer.setShowGutter(false);
