--- a/live-literals/livelit.html
+++ b/live-literals/livelit.html
@@ -244,7 +244,7 @@ var grades = sheet([
 
         <figure>
         <label for="mn-bret" class="margin-toggle">&#8853;</label><input type="checkbox" id="mn-bret" class="margin-toggle"/><span class="marginnote">From Bret Victor, <a href="https://vimeo.com/36579366">Inventing on Principle</a>, 23th minute, CUSEC, 2012</span>
-        <img src="bret.png" style="width: 700px; border: 1px dotted black; padding: 1em; background-color: white;"/>
+        <img src="images/bret.png" style="width: 700px; border: 1px dotted black; padding: 1em; background-color: white;"/>
       </figure>
 
 <p>
