--- a/live-literals/livelit.html
+++ b/live-literals/livelit.html
@@ -4,7 +4,7 @@
   <link rel="stylesheet" href="styles/tufte.css"/>
   <link rel="stylesheet" href="styles/latex.css"/>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-    
+<title>Live Literals</title>    
 <script src="js/esprima.js"></script>
 <script src="js/jquery-1.11.0.min.js"></script>
 <script src="js/libsheet.js"></script>
