--- a/live-literals/livelit.html
+++ b/live-literals/livelit.html
@@ -336,7 +336,7 @@ class="margin-toggle"/>
 
 
       <p>
-        Full obliteration of the distinction between source code an GUI is represented by programming systems based on structure editing (als known as  &ldquot;projectional editing&rdquot;), like MPS<label for="sn-mps" class="margin-toggle
+        Full obliteration of the distinction between source code an GUI is represented by programming systems based on structure editing (als known as  &ldquo;projectional editing&rdquo;), like MPS<label for="sn-mps" class="margin-toggle
 sidenote-number"></label> <input type="checkbox" id="sn-mps"
 class="margin-toggle"/>
         <span class="sidenote">Jetbrains, <a href="https://www.jetbrains.com/mps/">Meta Programming System (MPS)</a></span>. Such systems represent the opposite end of the spectrum regarding integration: there is no source code at all, the only interface is the graphical user interface.
