--- a/live16/reveal.js/LiveLiteralsRevealed.html
+++ b/live16/reveal.js/LiveLiteralsRevealed.html
@@ -52,6 +52,7 @@
                   <li>Live programming: improving feedback and immediacy
                   <li>IDE as crucial part of programming language
                   <li>Our working hypothesis: source code for input and output
+                  <li>For now: focus on <em>literals</em> as input output ports
                 </ul>
               </section>
 
