--- a/live16/reveal.js/LiveLiteralsRevealed.html
+++ b/live16/reveal.js/LiveLiteralsRevealed.html
@@ -50,7 +50,7 @@
 
                 <ul>
                   <li>Live programming: improving feedback and immediacy
-                  <li>IDE as crucial part of programming language
+                  <li>Requires IDE as crucial part of programming language
                   <li>Our working hypothesis: source code for input and output
                   <li>For now: focus on <em>literals</em> as input output ports
                 </ul>
@@ -170,10 +170,10 @@ var grades = sheet([
               <section>
                 <h2>Live Literals</h2>
                 <ul>
-                  <li>Source code as interactive medium of input and ouput
+                  <li>Source code as interactive medium of input and output
                   <li>Live literals: tests, spreadsheets, "probes"
                   <li>Towards live text
-                  <li>Source code all the things. 
+                  <li>Source code all the things
                 </ul>
 
               </section>
