--- a/live16/reveal.js/LiveLiteralsRevealed.html
+++ b/live16/reveal.js/LiveLiteralsRevealed.html
@@ -215,7 +215,7 @@ var grades = sheet([
     editorProbes.setTheme("ace/theme/eclipse");
     editorProbes.session.setMode("ace/mode/javascript");
   editorProbes.session.setOption("useWorker", false);
-  editorProbes.container.style.lineHeight = 1.5;
+  //editorProbes.container.style.lineHeight = 1.5;
   editorProbes.getSession().on('change', changeHandler(editorProbes));
   editorProbes.setOptions({
   fontFamily: "Menlo",
