--- a/live16/reveal.js/LiveLiteralsRevealed.html
+++ b/live16/reveal.js/LiveLiteralsRevealed.html
@@ -51,8 +51,8 @@
                 <ul>
                   <li>Live programming: improving feedback and immediacy
                   <li>Requires IDE as crucial part of programming language
-                  <li>Our working hypothesis: source code for input and output
-                  <li>For now: focus on <em>literals</em> as input output ports
+                  <li>Our working hypothesis: <em>source code</em> for input and output
+                  <li>For now: focus on <em>literals</em> as input/output ports
                 </ul>
               </section>
 
@@ -158,7 +158,7 @@ var grades = sheet([
               </section>
 
               <section>
-                <h3>But, but, why!?</h3>
+                <h3>Why?</h3>
 
                 <ul>
                   <li>Less is more
